--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a7ae073
-	trimbase = 
+	trim = turtlebot_arm_ikfast_plugin
+	base = c749373
+	trimbase = a7ae073
 	parent = upstream
 	previous = a8c892a
