--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = b637228
-	trimbase = 
+	trim = turtlebot_arm_kinect_calibration
+	base = 33e769d
+	trimbase = b637228
 	parent = upstream
 	previous = a8c892a
