--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8205401
-	trimbase = 
+	trim = turtlebot_arm_description
+	base = af55352
+	trimbase = 8205401
 	parent = upstream
 	previous = a8c892a
