--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e4153bd
-	trimbase = 
+	trim = turtlebot_arm_bringup
+	base = 8ed3a2c
+	trimbase = e4153bd
 	parent = upstream
 	previous = a8c892a
