--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a072e54
+	base = 6ebc56d
 	trimbase = 
 	parent = release/indigo/turtlebot_arm_moveit_config
-	previous = 
+	previous = a072e54
