--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1dab016
+	base = 3d3319d
 	trimbase = 
 	parent = debian/indigo/turtlebot_arm_moveit_config
-	previous = 
+	previous = 1dab016
