--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a4863d8
+	base = b1b80fb
 	trimbase = 
 	parent = debian/indigo/turtlebot_arm_kinect_calibration
-	previous = 
+	previous = a4863d8
