--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bbf2754
+	base = b94ed12
 	trimbase = 
 	parent = release/indigo/turtlebot_arm_moveit_demos
-	previous = 
+	previous = bbf2754
