--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e63c3e1
+	base = aefd726
 	trimbase = 
 	parent = debian/indigo/turtlebot_arm_moveit_demos
-	previous = 
+	previous = e63c3e1
