--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c749373
+	base = d111d9d
 	trimbase = 
 	parent = release/indigo/turtlebot_arm_ikfast_plugin
-	previous = 
+	previous = c749373
