--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b49f161
+	base = 00bbfb9
 	trimbase = 
 	parent = debian/indigo/turtlebot_arm_ikfast_plugin
-	previous = 
+	previous = b49f161
