--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cd7649d
+	base = 3da33d5
 	trimbase = 
 	parent = debian/indigo/turtlebot_arm_bringup
-	previous = 
+	previous = cd7649d
