--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = af55352
+	base = ae047b3
 	trimbase = 
 	parent = release/indigo/turtlebot_arm_description
-	previous = 
+	previous = af55352
