--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d07ac03
+	base = 68f488f
 	trimbase = 
 	parent = debian/indigo/turtlebot_arm_description
-	previous = 
+	previous = d07ac03
