--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e7d6f5a
+	base = 941a1f6
 	trimbase = 
 	parent = rpm/indigo/turtlebot_arm_moveit_config
-	previous = 
+	previous = e7d6f5a
