--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 33e769d
+	base = 8cfd1ba
 	trimbase = 
 	parent = release/indigo/turtlebot_arm_kinect_calibration
-	previous = 
+	previous = 33e769d
