--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e3fdbf1
+	base = 92ed690
 	trimbase = 
 	parent = rpm/indigo/turtlebot_arm_kinect_calibration
-	previous = 
+	previous = e3fdbf1
