--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6b51dbd
+	base = ac9fd74
 	trimbase = 
 	parent = rpm/indigo/turtlebot_arm_moveit_demos
-	previous = 
+	previous = 6b51dbd
