--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 63876fa
+	base = da791ac
 	trimbase = 
 	parent = rpm/indigo/turtlebot_arm_ikfast_plugin
-	previous = 
+	previous = 63876fa
