--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8ed3a2c
+	base = c5eaa73
 	trimbase = 
 	parent = release/indigo/turtlebot_arm_bringup
-	previous = 
+	previous = 8ed3a2c
