--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ffa4e3d
+	base = af2a83b
 	trimbase = 
 	parent = rpm/indigo/turtlebot_arm_bringup
-	previous = 
+	previous = ffa4e3d
