--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e0cc2ec
+	base = b04e2c8
 	trimbase = 
 	parent = rpm/indigo/turtlebot_arm_description
-	previous = 
+	previous = e0cc2ec
