--- a/turtlebot_arm_ikfast_plugin/CMakeLists.txt
+++ b/turtlebot_arm_ikfast_plugin/CMakeLists.txt
@@ -9,7 +9,6 @@ find_package(catkin REQUIRED COMPONENTS
   )
 find_package(Boost REQUIRED)
 find_package(Eigen REQUIRED)
-find_package(LAPACK REQUIRED)
 
 catkin_package(
   LIBRARIES
@@ -28,7 +27,7 @@ link_directories(${catkin_LIBRARY_DIRS})
 set(MOVEIT_LIB_NAME turtlebot_arm_moveit_ikfast_kinematics_plugin)
 
 add_library(${MOVEIT_LIB_NAME} src/turtlebot_arm_arm_ikfast_moveit_plugin.cpp)
-target_link_libraries(${MOVEIT_LIB_NAME} ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${LAPACK_LIBRARIES})
+target_link_libraries(${MOVEIT_LIB_NAME} ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
 install(TARGETS ${MOVEIT_LIB_NAME} LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
 install(DIRECTORY include/ DESTINATION include)
