--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_moveit_config
 	base = a072e54
-	trimbase = f377f7b
+	trimbase = 
 	parent = upstream
 	previous = a8c892a
