--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_moveit_config
-	base = 3d30fab
-	trimbase = 
+	base = 9c122a0
+	trimbase = 3d30fab
 	parent = upstream
 	previous = c0695aa
