--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_moveit_demos
 	base = bbf2754
-	trimbase = 74d24bb
+	trimbase = 
 	parent = upstream
 	previous = a8c892a
