--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_moveit_demos
-	base = c536044
-	trimbase = 
+	base = cb6afe2
+	trimbase = c536044
 	parent = upstream
 	previous = c0695aa
