--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_kinect_calibration
-	base = d8d7ebf
-	trimbase = 
+	base = 622b5ba
+	trimbase = d8d7ebf
 	parent = upstream
 	previous = c0695aa
