--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_bringup
 	base = 8ed3a2c
-	trimbase = e4153bd
+	trimbase = 
 	parent = upstream
 	previous = a8c892a
