--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.0-0": ["Sat Aug 16 2014", "Jorge Santos", "jsantossimon@gmail.com"]}
+{"0.3.0-1": ["Sat Aug 16 2014", "Jorge Santos", "jsantossimon@gmail.com"], "0.3.0-0": ["Sat Aug 16 2014", "Jorge Santos", "jsantossimon@gmail.com"]}
