--- a/turtlebot_arm_ikfast_plugin/package.xml
+++ b/turtlebot_arm_ikfast_plugin/package.xml
@@ -42,9 +42,11 @@
   <build_depend>moveit_core</build_depend>
   <build_depend>pluginlib</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>tf_conversions</build_depend>
 
   <run_depend>cmake_modules</run_depend>
   <run_depend>moveit_core</run_depend>
   <run_depend>pluginlib</run_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>tf_conversions</run_depend>
 </package>
