--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_moveit_config
 	base = 9c122a0
-	trimbase = 3d30fab
+	trimbase = 
 	parent = upstream
 	previous = c0695aa
