--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_moveit_config
-	base = c2d4a8a
-	trimbase = 
+	base = 478a55c
+	trimbase = c2d4a8a
 	parent = upstream
 	previous = b6d914a
