--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_ikfast_plugin
 	base = f814397
-	trimbase = 39f089e
+	trimbase = 
 	parent = upstream
 	previous = c0695aa
