--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_ikfast_plugin
-	base = f0fdc9f
-	trimbase = 
+	base = 122178e
+	trimbase = f0fdc9f
 	parent = upstream
 	previous = b6d914a
