--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_kinect_calibration
 	base = 622b5ba
-	trimbase = d8d7ebf
+	trimbase = 
 	parent = upstream
 	previous = c0695aa
