--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_kinect_calibration
-	base = bac8272
-	trimbase = 
+	base = f604492
+	trimbase = bac8272
 	parent = upstream
 	previous = b6d914a
