--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_description
 	base = f69f974
-	trimbase = 8e085f4
+	trimbase = 
 	parent = upstream
 	previous = c0695aa
