--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_description
-	base = ef46487
-	trimbase = 
+	base = fa9c549
+	trimbase = ef46487
 	parent = upstream
 	previous = b6d914a
