--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_bringup
 	base = 8b8e0a6
-	trimbase = d12c3c3
+	trimbase = 
 	parent = upstream
 	previous = c0695aa
