--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_bringup
-	base = 5960296
-	trimbase = 
+	base = 612582f
+	trimbase = 5960296
 	parent = upstream
 	previous = b6d914a
