--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_moveit_config
 	base = 478a55c
-	trimbase = c2d4a8a
+	trimbase = 
 	parent = upstream
 	previous = b6d914a
