--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_moveit_config
-	base = 5bc9782
-	trimbase = 
+	base = 11309b4
+	trimbase = 5bc9782
 	parent = upstream
 	previous = dc27523
