--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_ikfast_plugin
-	base = b2473b0
-	trimbase = 
+	base = 0abae9c
+	trimbase = b2473b0
 	parent = upstream
 	previous = dc27523
