--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_moveit_demos
 	base = e13172a
-	trimbase = 8523d25
+	trimbase = 
 	parent = upstream
 	previous = b6d914a
