--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_kinect_calibration
-	base = 6a9204a
-	trimbase = 
+	base = c4a572d
+	trimbase = 6a9204a
 	parent = upstream
 	previous = dc27523
