--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_description
 	base = fa9c549
-	trimbase = ef46487
+	trimbase = 
 	parent = upstream
 	previous = b6d914a
