--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_description
-	base = 13701eb
-	trimbase = 
+	base = 0470aa6
+	trimbase = 13701eb
 	parent = upstream
 	previous = dc27523
