--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 415b775
-	trimbase = 
+	trim = turtlebot_arm
+	base = 770fa07
+	trimbase = 415b775
 	parent = upstream
 	previous = dc27523
