--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 770fa07
+	base = e9ec7f7
 	trimbase = 
 	parent = release/indigo/turtlebot_arm
-	previous = 
+	previous = 770fa07
