--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e2925d9
+	base = ac357ba
 	trimbase = 
 	parent = debian/indigo/turtlebot_arm
-	previous = 
+	previous = e2925d9
