--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e2925d9
+	base = 7f1a11c
 	trimbase = 
 	parent = debian/indigo/turtlebot_arm
-	previous = 
+	previous = e2925d9
