--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9743a2e
+	base = 10fd16f
 	trimbase = 
 	parent = rpm/indigo/turtlebot_arm
-	previous = 
+	previous = 9743a2e
