--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_moveit_config
 	base = 11309b4
-	trimbase = 5bc9782
+	trimbase = 
 	parent = upstream
 	previous = dc27523
