--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_moveit_config
-	base = b0bc7df
-	trimbase = 
+	base = b02a322
+	trimbase = b0bc7df
 	parent = upstream
 	previous = 4e0a4f2
