--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_ikfast_plugin
-	base = 811b3cf
-	trimbase = 
+	base = 1f8c6bc
+	trimbase = 811b3cf
 	parent = upstream
 	previous = 4e0a4f2
