--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_moveit_demos
 	base = 0d1caed
-	trimbase = aa917b8
+	trimbase = 
 	parent = upstream
 	previous = dc27523
