--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_moveit_demos
-	base = 43ae729
-	trimbase = 
+	base = 8bf414f
+	trimbase = 43ae729
 	parent = upstream
 	previous = 4e0a4f2
