--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_kinect_calibration
-	base = 633dc7d
-	trimbase = 
+	base = 804fc24
+	trimbase = 633dc7d
 	parent = upstream
 	previous = 4e0a4f2
