--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_description
-	base = e548b1f
-	trimbase = 
+	base = ddda491
+	trimbase = e548b1f
 	parent = upstream
 	previous = 4e0a4f2
