--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_bringup
 	base = c99fd1b
-	trimbase = 690657a
+	trimbase = 
 	parent = upstream
 	previous = dc27523
