--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm
-	base = cea3957
-	trimbase = 
+	base = 14a0477
+	trimbase = cea3957
 	parent = upstream
 	previous = 4e0a4f2
