--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.0": ["MoveIt Setup Assistant", "assistant@moveit.ros.org"], "0.3.1": ["MoveIt Setup Assistant", "assistant@moveit.ros.org"]}
+{"0.3.2": ["MoveIt Setup Assistant", "assistant@moveit.ros.org"], "0.3.0": ["MoveIt Setup Assistant", "assistant@moveit.ros.org"], "0.3.1": ["MoveIt Setup Assistant", "assistant@moveit.ros.org"]}
