--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_moveit_config
-	base = c5d381c
-	trimbase = 
+	base = c491f56
+	trimbase = c5d381c
 	parent = upstream
 	previous = 975ce27
