--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_ikfast_plugin
-	base = 0f38851
-	trimbase = 
+	base = 9ab299c
+	trimbase = 0f38851
 	parent = upstream
 	previous = 975ce27
