--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_moveit_demos
-	base = 3668a3f
-	trimbase = 
+	base = 0b75a2a
+	trimbase = 3668a3f
 	parent = upstream
 	previous = 975ce27
