--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 707bb52
-	trimbase = 
+	trim = turtlebot_arm_block_manipulation
+	base = db67104
+	trimbase = 707bb52
 	parent = upstream
 	previous = 975ce27
