--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_kinect_calibration
-	base = 6deda95
-	trimbase = 
+	base = 07da13d
+	trimbase = 6deda95
 	parent = upstream
 	previous = 975ce27
