--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_description
-	base = b411958
-	trimbase = 
+	base = fe713b4
+	trimbase = b411958
 	parent = upstream
 	previous = 975ce27
