--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_bringup
 	base = 480ab11
-	trimbase = 09f4150
+	trimbase = 
 	parent = upstream
 	previous = 4e0a4f2
