--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm_bringup
-	base = 6daa304
-	trimbase = 
+	base = 335d8cd
+	trimbase = 6daa304
 	parent = upstream
 	previous = 975ce27
