--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = turtlebot_arm
-	base = 5fbdae3
-	trimbase = 
+	base = 75b5e0b
+	trimbase = 5fbdae3
 	parent = upstream
 	previous = 975ce27
