--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b3a0b8d
+	base = 94d6e2c
 	trimbase = 
 	parent = debian/indigo/turtlebot_arm_block_manipulation
-	previous = 
+	previous = b3a0b8d
