--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <package>
   <name>turtlebot_arm</name>
-  <version>0.3.2</version>
+  <version>0.3.3</version>
   <description>
     The turtlebot arm meta package.
   </description>
@@ -16,6 +16,7 @@
   <run_depend>turtlebot_arm_bringup</run_depend>
   <run_depend>turtlebot_arm_description</run_depend>
   <run_depend>turtlebot_arm_ikfast_plugin</run_depend>
+  <run_depend>turtlebot_arm_block_manipulation</run_depend>
   <run_depend>turtlebot_arm_kinect_calibration</run_depend>
   <run_depend>turtlebot_arm_moveit_config</run_depend>
   <run_depend>turtlebot_arm_moveit_demos</run_depend>
