--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = db67104
+	base = 40e8e8d
 	trimbase = 
 	parent = release/indigo/turtlebot_arm_block_manipulation
-	previous = 
+	previous = db67104
