--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6e325c4
+	base = e17a5aa
 	trimbase = 
 	parent = rpm/indigo/turtlebot_arm_block_manipulation
-	previous = 
+	previous = 6e325c4
