--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.2-0": ["Sat Aug 30 2014", "Jorge Santos", "jsantossimon@gmail.com"], "0.3.1-0": ["Fri Aug 22 2014", "Jorge Santos", "jsantossimon@gmail.com"]}
+{"0.3.2-0": ["Sat Aug 30 2014", "Jorge Santos", "jsantossimon@gmail.com"], "0.3.1-0": ["Fri Aug 22 2014", "Jorge Santos", "jsantossimon@gmail.com"], "0.3.3-0": ["Sat Sep 20 2014", "Jorge Santos", "jsantossimon@gmail.com"]}
