--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4ec1ab7
+	base = ee8adef
 	trimbase = 
 	parent = rpm/indigo/turtlebot_arm_moveit_config
-	previous = 
+	previous = 4ec1ab7
