--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 053efaf
+	base = a3b1258
 	trimbase = 
 	parent = rpm/indigo/turtlebot_arm_kinect_calibration
-	previous = 
+	previous = 053efaf
