--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cd33209
+	base = 0da9a2b
 	trimbase = 
 	parent = rpm/indigo/turtlebot_arm_moveit_demos
-	previous = 
+	previous = cd33209
