--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b4af01e
+	base = 216f169
 	trimbase = 
 	parent = rpm/indigo/turtlebot_arm_ikfast_plugin
-	previous = 
+	previous = b4af01e
