--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 16148af
+	base = dbc7ef3
 	trimbase = 
 	parent = rpm/indigo/turtlebot_arm_bringup
-	previous = 
+	previous = 16148af
