--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = abfd114
+	base = f1b4418
 	trimbase = 
 	parent = rpm/indigo/turtlebot_arm_block_manipulation
-	previous = 
+	previous = abfd114
