--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2dedfd5
+	base = 9218114
 	trimbase = 
 	parent = rpm/indigo/turtlebot_arm
-	previous = 
+	previous = 2dedfd5
