--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 143c1a7
+	base = 1691a88
 	trimbase = 
 	parent = rpm/indigo/turtlebot_arm_description
-	previous = 
+	previous = 143c1a7
